--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "typescript": "^3.8.3",
     "util": "^0.12.2",
     "yaml": "^1.7.2"
+  },
+  "devDependencies": {
+    "@types/node": "^13.13.5",
+    "ansi-to-html": "^0.6.14"
   }
 }
